Bug 341365 - Tabs-on-left ("ViewTree") painting code isn't hi-dpi ready
Summary: Tabs-on-left ("ViewTree") painting code isn't hi-dpi ready
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: frameworks
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks: 341361
  Show dependency treegraph
 
Reported: 2014-11-28 14:48 UTC by Eike Hein
Modified: 2015-03-14 19:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eike Hein 2014-11-28 14:48:08 UTC
ViewTree(Delegate)'s painting code currently does low-level painting operations and uses some hardcoded size values that make the result not scale up well on hi-dpi systems.

Reproducible: Always
Comment 1 Eike Hein 2015-03-14 19:20:45 UTC
Git commit 0a59b0992077bac5f69a00793abf507b3855df50 by Eike Hein.
Committed on 14/03/2015 at 19:19.
Pushed by hein into branch '1.6'.

Make custom delegate high-DPI capable and improve anti-aliasing quality.
CCMAIL:david@davidedmundson.co.uk

M  +51   -135  src/viewer/viewtree.cpp

http://commits.kde.org/konversation/0a59b0992077bac5f69a00793abf507b3855df50