Make custom delegate high-DPI capable and improve anti-aliasing quality.

BUG:341365
CCMAIL:david@davidedmundson.co.uk